-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 2.3.0-rc
-
Windows 7 64bit SP1
MSVS 2010, Debugging Tools for Windows (x64)
-
9fa409cbd90f120132bc2817be2216e2a7c0baba
Profiler runs on after pressing "Stop" to early. (And there is no way to stop it then except by starting a new profiling)
Steps to reproduce:
1. Create a simple Qt Quick application or QML project. (Examples should fit)
2. Go to the Analyze view
3. Press the "Start" (Profiling) button and immediately afterwards the "Stop" (Profiling) button
(Stop must be pressed before the time starts to run or the widget becomes visible)
| For Gerrit Dashboard: QTCREATORBUG-5804 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 3606,1 | QmlProfiler: manage quick stops before connection | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |