QmlProfiler: manage quick stops before connection

Task-number: QTCREATORBUG-5804
Change-Id: I86e9a94c5352d0ac8f9157949afd3b32d60cb05e
Reviewed-on: http://codereview.qt.nokia.com/3606
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Kai Koehne <kai.koehne@nokia.com>